--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
             tabindex="0">
 
             <div class="accordion" id="accordionOne">
-              <div class="accordion-item">
+              <div class="accordion-item  border-0">
                 <h2 class="accordion-header main-header" id="panelOpen-headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse"
                     data-bs-target="#panelOpen-collapseOne" aria-expanded="true" aria-controls="panelOpen-collapseOne">
+                    <img src="assets/images/111.png" alt="i"> <span class="mx-1"></span>
                     Top Leagues
                   </button>
                 </h2>
@@ -174,11 +175,12 @@
             </div>
 
             <div class="accordion" id="accordionTwo">
-              <div class="accordion-item">
+              <div class="accordion-item  border-0">
                 <h2 class="accordion-header main-header" id="openpaneltwo-headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse"
                     data-bs-target="#openpaneltwo-collapseOne" aria-expanded="true"
                     aria-controls="openpaneltwo-collapseOne">
+                    <img src="assets/images/222.png" alt="i"> <span class="mx-1"></span>
                     Top Countries
                   </button>
                 </h2>
@@ -191,6 +193,7 @@
                         <h2 class="accordion-header sub-header" id="bottom1">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#BOne" aria-expanded="false" aria-controls="BOne">
+                            <img src="assets/images/aus.png" alt="i"> <span class="mx-1"></span>
                             Australia
                           </button>
                         </h2>
@@ -212,6 +215,7 @@
                       <h2 class="accordion-header sub-header" id="bottom2">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                           data-bs-target="#BTwo" aria-expanded="false" aria-controls="BTwo">
+                          <img src="assets/images/bel.png" alt="i"> <span class="mx-1"></span>
                           Belgium
                         </button>
                       </h2>
@@ -229,6 +233,7 @@
                       <h2 class="accordion-header sub-header" id="bottom3">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                           data-bs-target="#BThree" aria-expanded="false" aria-controls="BThree">
+                          <img src="assets/images/bra.png" alt="i"> <span class="mx-1"></span>
                           Brazil
                         </button>
                       </h2>
@@ -246,6 +251,7 @@
                       <h2 class="accordion-header sub-header" id="bottom4">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                           data-bs-target="#BFour" aria-expanded="false" aria-controls="BFour">
+                          <img src="assets/images/chil.png" alt="i"> <span class="mx-1"></span>
                           Chile
                         </button>
                       </h2>
@@ -260,6 +266,7 @@
                         <h2 class="accordion-header sub-header" id="bottom5">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#BFive" aria-expanded="false" aria-controls="BFive">
+                            <img src="assets/images/cyprus.png" alt="i"> <span class="mx-1"></span>
                             Cyprus
                           </button>
                         </h2>
@@ -275,6 +282,7 @@
                         <h2 class="accordion-header sub-header" id="bottom6">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#BSix" aria-expanded="false" aria-controls="BSix">
+                            <img src="assets/images/egypt.png" alt="i"> <span class="mx-1"></span>
                             Egypt
                           </button>
                         </h2>
@@ -290,6 +298,7 @@
                         <h2 class="accordion-header sub-header" id="bottom7">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#BSeven" aria-expanded="false" aria-controls="BSeven">
+                            <img src="assets/images/den.png" alt="i"> <span class="mx-1"></span>
                             England
                           </button>
                         </h2>
@@ -307,6 +316,7 @@
                         <h2 class="accordion-header sub-header" id="bottom8">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#BEight" aria-expanded="false" aria-controls="BEight">
+                            <img src="assets/images/den.png" alt="i"> <span class="mx-1"></span>
                             England Amateur
                           </button>
                         </h2>
@@ -322,6 +332,7 @@
                         <h2 class="accordion-header sub-header" id="bottom9">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#BNine" aria-expanded="false" aria-controls="BNine">
+                            <img src="assets/images/fra.png" alt="i"> <span class="mx-1"></span>
                             France
                           </button>
                         </h2>
@@ -337,6 +348,7 @@
                         <h2 class="accordion-header sub-header" id="bottom10">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#BTen" aria-expanded="false" aria-controls="BTen">
+                            <img src="assets/images/ger.png" alt="i"> <span class="mx-1"></span>
                             Germany
                           </button>
                         </h2>
@@ -352,6 +364,7 @@
                         <h2 class="accordion-header sub-header" id="bottom11">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#BEleven" aria-expanded="false" aria-controls="BEleven">
+                            <img src="assets/images/gre.png" alt="i"> <span class="mx-1"></span>
                             Greece
                           </button>
                         </h2>
@@ -368,6 +381,7 @@
                         <h2 class="accordion-header sub-header" id="bottom12">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#BTwelve" aria-expanded="false" aria-controls="BTwelve">
+                            <img src="assets/images/ind.png" alt="i"> <span class="mx-1"></span>
                             India
                           </button>
                         </h2>
