completed with slider

--- a/index.html
+++ b/index.html
@@ -39,50 +39,65 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="slider-card">
-                      <img src="assets/images/foot.png" alt="" class="img-fluid">
+                      <div class="image">
+                        <img src="assets/images/foot.png" alt="" class="img-fluid">
+                      </div>
                       <p>Football</p>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="slider-card">
-                      <img src="assets/images/Basketball_Clipart.svg.png" alt="" class="img-fluid">
+                      <div class="image">
+                        <img src="assets/images/Basketball_Clipart.svg.png" alt="" class="img-fluid">
+                      </div>
                       <p>Basketball</p>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="slider-card">
-                      <img src="assets/images/base.png" alt="" class="img-fluid">
+                      <div class="image">
+                        <img src="assets/images/base.png" alt="" class="img-fluid">
+                      </div>
                       <p>Baseball</p>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="slider-card">
-                      <img src="assets/images/Ice_hockey_puck_-_2.jpg" alt="" class="img-fluid">
+                      <div class="image">
+                        <img src="assets/images/hock.png" alt="" class="img-fluid">
+                      </div>
                       <p>Ice Hockey</p>
                     </div>
                   </div>
-
                   <div class="swiper-slide">
                     <div class="slider-card">
-                      <img src="assets/images/foot.png" alt="" class="img-fluid">
+                      <div class="image">
+                        <img src="assets/images/foot.png" alt="" class="img-fluid">
+                      </div>
                       <p>Football</p>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="slider-card">
-                      <img src="assets/images/Basketball_Clipart.svg.png" alt="" class="img-fluid">
+                      <div class="image">
+                        <img src="assets/images/Basketball_Clipart.svg.png" alt="" class="img-fluid">
+                      </div>
                       <p>Basketball</p>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="slider-card">
-                      <img src="assets/images/base.png" alt="" class="img-fluid">
+                      <div class="image">
+                        <img src="assets/images/base.png" alt="" class="img-fluid">
+                      </div>
                       <p>Baseball</p>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="slider-card">
-                      <img src="assets/images/Ice_hockey_puck_-_2.jpg" alt="" class="img-fluid">
+                      <div class="image">
+                        <img src="assets/images/hock.png" alt="" class="img-fluid">
+                      </div>
                       <p>Ice Hockey</p>
                     </div>
                   </div>
