--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Your Page</title>
-  <link rel='shortcut icon' href='assets/images/logo.png' type='image/x-icon'>
-  <link rel="stylesheet" href="assets/vendor/fontawesome/css/all.min.css">
+  <title>Ball League</title>
+  <link rel='shortcut icon' href='assets/images/foot.png' type='image/x-icon'>
   <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/vendor/Swiper-slider/css/swiper-bundle.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
