3 new pages added

--- a/page2.html
+++ b/page2.html
@@ -558,6 +558,7 @@
             </div>
 
             <div class="coupon-content">
+              <li class="arrow"><img src="assets/images/arrow.png" alt="q"></li>
               <ul class="nav nav-tabs" id="CouponTab" role="tablist">
                 <li class="nav-item" role="presentation">
                   <button class="nav-link active" id="one-tab" data-bs-toggle="tab" data-bs-target="#one-tab-pane"
