--- a/page2.html
+++ b/page2.html
@@ -588,16 +588,16 @@
                   <div class="content-holder">
 
                     <div class="head content-row p-1">
-                      <div>
+                      <div class="ddate">
                         <p>Tue Jan 10</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>1</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>X</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>2</p>
                       </div>
                     </div>
@@ -787,16 +787,16 @@
                 <div class="tab-pane fade" id="two-tab-pane" role="tabpanel" aria-labelledby="two-tab" tabindex="0">
                   <div class="content-holder">
                     <div class="head content-row p-1">
-                      <div>
+                      <div class="ddate">
                         <p>Tue Jan 10</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>1</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>X</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>2</p>
                       </div>
                     </div>
@@ -835,16 +835,16 @@
                 <div class="tab-pane fade" id="three-tab-pane" role="tabpanel" aria-labelledby="three-tab" tabindex="0">
                   <div class="content-holder">
                     <div class="head content-row p-1">
-                      <div>
+                      <div class="ddate">
                         <p>Tue Jan 10</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>1</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>X</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>2</p>
                       </div>
                     </div>
@@ -883,16 +883,16 @@
                 <div class="tab-pane fade" id="four-tab-pane" role="tabpanel" aria-labelledby="four-tab" tabindex="0">
                   <div class="content-holder">
                     <div class="head content-row p-1">
-                      <div>
+                      <div class="ddate">
                         <p>Tue Jan 10</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>1</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>X</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>2</p>
                       </div>
                     </div>
@@ -931,16 +931,16 @@
                 <div class="tab-pane fade" id="five-tab-pane" role="tabpanel" aria-labelledby="five-tab" tabindex="0">
                   <div class="content-holder">
                     <div class="head content-row p-1">
-                      <div>
+                      <div class="ddate">
                         <p>Tue Jan 10</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>1</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>X</p>
                       </div>
-                      <div class="text-center">
+                      <div class="text-center numx">
                         <p>2</p>
                       </div>
                     </div>
