--- a/page3.html
+++ b/page3.html
@@ -135,16 +135,16 @@
                     <div class="content-holder">
                       <div>
                         <div class="head content-row p-1">
-                          <div>
+                          <div class="ddate">
                             <p>Thu Jan 12</p>
                           </div>
-                          <div class="text-center">
+                          <div class="text-center numx">
                             <p>1</p>
                           </div>
-                          <div class="text-center">
+                          <div class="text-center numx">
                             <p>X</p>
                           </div>
-                          <div class="text-center">
+                          <div class="text-center numx">
                             <p>2</p>
                           </div>
                         </div>
@@ -176,16 +176,16 @@
 
                       <div>
                         <div class="head content-row p-1">
-                          <div>
+                          <div class="ddate">
                             <p>Fri Jan 13</p>
                           </div>
-                          <div class="text-center">
+                          <div class="text-center numx">
                             <p>1</p>
                           </div>
-                          <div class="text-center">
+                          <div class="text-center numx">
                             <p>X</p>
                           </div>
-                          <div class="text-center">
+                          <div class="text-center numx">
                             <p>2</p>
                           </div>
                         </div>
@@ -217,16 +217,16 @@
 
                       <div>
                         <div class="head content-row p-1">
-                          <div>
+                          <div class="ddate">
                             <p>Sat Jan 14</p>
                           </div>
-                          <div class="text-center">
+                          <div class="text-center numx">
                             <p>1</p>
                           </div>
-                          <div class="text-center">
+                          <div class="text-center numx">
                             <p>X</p>
                           </div>
-                          <div class="text-center">
+                          <div class="text-center numx">
                             <p>2</p>
                           </div>
                         </div>
